fix: overflow fixes cuz css sucks

--- a/client/src/components/TimeTable.css
+++ b/client/src/components/TimeTable.css
@@ -3,7 +3,6 @@
   grid-template-columns: 10fr 1fr 10fr;
   text-align: center;
   grid-column-gap: 2px;
-  padding: 5%;
 }
 
 .sectionGridMorning {
@@ -28,6 +27,7 @@
   grid-template-rows: repeat(2, minmax(80px, auto));
   grid-column: 1/8;
   grid-row: 1/3;
+  overflow-x: scroll;
   background-color: aqua;
 }
 
@@ -37,6 +37,7 @@
   grid-template-rows: repeat(2, minmax(80px, auto));
   grid-column: 1/7;
   grid-row: 1/3;
+  overflow-x: scroll;
   background-color: aqua;
 }
 
